# Madness_Interactive

./: .Makefile.swp  .cursorrules  .gitignore  .gitmodules  GEMINI.md  HANDOFF_insights_2026-05-24.md  Makefile  README.md  TODO.md  example-todo-command-mcp-add-todo.md  fix-scroll-box-july242025.txt  fixed_mcp_config.json  fixed_script.sh  mindmap.html  notes-feb19-aug27-2025.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude_temp/: last_tool_use_id.txt
.cursor/: rules
.cursor/rules/: custom-automation-workflow.mdc  (+2 more)
ASOLARIA-TRIAL/: FINDINGS.md  proof.mjs
cursor_rules/: todo_server_tips.mdc
docs/: changelog.md  changelog_last_3_days.md  documentation_plan.md  hammerspoon_changelog.md  machine-update-flow.md  master_changelog.md  mindmap.dot  mindmap.html  mindmap.json  mindmap.md  mindmap_active_todos.html  mindmap_data.json  mindmap_detailed.html  mindmap_lessons.html  mindmap_lessons_test.html  mindmap_test.html  mindmap_todos.html  mindmap_with_todos.html  mqtt-ai-analyzer-guide.md  omnispindle_changelog.md  swarmonomicon_changelog.md
examples/: cherry-blossom-2.html  cherry-blossom-explorer.html  ironheartamplifier.tsx  remixed-cd7fb376.tsx  star-mapper.tsx  theme-extractor.tsx  word-cloud.tsx
grimoire/: LESSONS.md  README.md  __init__.py  cli.py  grimoire.py
omnispindle/: cli.py  server.py  storage.py  task_queue.py
prompts/: AGENT_TOOLS.md  Eventghost-Rust-rules  PROMPT_GUIDELINES.md  arch  architecture.mdc  default_rules  default_rules.mdc  environment_data_persistence.mdc  featurize_this.mdc  interrupted  mac  madtinker  madtinker.mdc  project_interconnections.md  todo-server.mdc  windows_shorthand.mdc
scripts/: README.md  cron-commit.sh  cursor_automation.py  cursor_rules_centralizer.zsh  deploy.sh  generate_mindmap.sh  ingest_history.sh  init_python_project.sh  init_rust_project.sh  install_git_hooks.sh  mass_cursor_rules_centralizer.zsh  mindmap_generator.py  move_history.sh  open_project_in_github.sh
theming/: themes_to_make.md
(+76 files in other folders)
